<resources>
    <string name="app_name">XpenseTracker</string>
    <string name="app_title">Xpense Tracker</string>
    <string name="txt_what_should_we_call">What should we call you?</string>
    <string name="txt_a_penny_spend">A Penny saved is a penny earned.</string>
    <string name="txt_home">Home</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_balance">Balance</string>
    <string name="txt_expense">Expense</string>
    <string name="txt_investmentorsaving">Investment/Saving</string>
    <string name="txt_add_transaction">Add Transaction</string>
    <string name="txt_welcome_to_expense">Welcome to Expense Manager</string>
    <string name="txt_transaction">Transaction</string>
    <string name="txt_transaction_type">Transaction Type</string>
    <string name="txt_category">Category</string>
    <string name="txt_food">Food</string>
    <string name="txt_shopping">Shopping</string>
    <string name="txt_entertainment">Entertainment</string>
    <string name="txt_grocery">Grocery</string>
    <string name="txt_health">Health</string>
    <string name="txt_bill">Bill</string>
    <string name="txt_maid_salary">Maid Salary</string>
    <string name="txt_trips">Trips</string>
    <string name="txt_utilities">Utilities</string>
    <string name="txt_gift">Gift</string>
    <string name="txt_enter_amount">Enter Amount</string>
    <string name="txt_transaction_added">Transaction added successfully</string>
    <string name="txt_add_note">Add Note</string>
    <string name="txt_please_enter">Please enter all mandatory fields.</string>
    <string name="txt_saving">Saving</string>
    <string name="txt_income">Income</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_update_transaction">Update Transaction</string>
    <string name="txt_delete_transaction">Delete Transaction</string>
</resources>