<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.HomeFragment">

    <include layout="@layout/layout_empty_home_screen"
        android:id="@+id/layoutEmptyScreen"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="5dp"
            app:cardCornerRadius="@dimen/_3sdp"
            android:layout_margin="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtHomeHeadMonth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="sjdskdjskd"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtDaysLeftToCompleteMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtHomeHeadMonth" />

                <TextView
                    android:id="@+id/txtBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:includeFontPadding="false"
                    android:text="@string/txt_balance"
                    android:textColor="@color/colorMintBlue"
                    android:textSize="@dimen/_8ssp"
                    app:drawableEndCompat="@drawable/ic_rupee"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtDaysLeftToCompleteMonth" />

                <TextView
                    android:id="@+id/txtAmountAvailable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="sans-serif-medium"
                    android:includeFontPadding="false"
                    android:padding="0dp"
                    android:maxLength="6"
                    android:textColor="@color/colorGreen"
                    android:textSize="@dimen/_38ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtBalance" />

                <TextView
                    android:id="@+id/txtExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/txt_expense"
                    android:textColor="#646D7E"
                    android:textSize="@dimen/_8ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtDaysLeftToCompleteMonth" />

                <TextView
                    android:id="@+id/txtExpenseAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="sans-serif-medium"
                    android:text="--|--"
                    android:maxLength="6"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintEnd_toEndOf="@id/txtExpense"
                    app:layout_constraintTop_toBottomOf="@id/txtExpense" />


                <TextView
                    android:id="@+id/txtInvestmentSaving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/txt_investmentorsaving"
                    android:textColor="#646D7E"
                    android:textSize="@dimen/_8ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtExpenseAmount" />

                <TextView
                    android:id="@+id/txtInvestedAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="sans-serif-medium"
                    android:text="--"
                    android:maxLength="6"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/_16ssp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/txtExpense"
                    app:layout_constraintTop_toBottomOf="@id/txtInvestmentSaving" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTransaction"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_add"
        app:borderWidth="0dp"
        app:tint="@android:color/white"
        android:backgroundTint="@color/primary"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/nav_color"
        app:itemRippleColor="@color/colorLightRed"
        app:itemTextAppearanceActive="@style/navTextActive"
        app:itemTextAppearanceInactive="@style/navTextInactive"
        app:itemTextColor="@color/nav_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>